--- a/Forma/EDnevnik.csproj
+++ b/Forma/EDnevnik.csproj
@@ -69,6 +69,18 @@
     <Compile Include="Konekcija.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Raspodela.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Raspodela.Designer.cs">
+      <DependentUpon>Raspodela.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Sifarnik.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Sifarnik.Designer.cs">
+      <DependentUpon>Sifarnik.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Glavna.resx">
       <DependentUpon>Glavna.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +100,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Raspodela.resx">
+      <DependentUpon>Raspodela.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Sifarnik.resx">
+      <DependentUpon>Sifarnik.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
