--- a/Forma/App.config
+++ b/Forma/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
 	<connectionStrings>
-		<add name="con" connectionString="Data Source = DESKTOP-CKQNC93\SQLEXPRESS; Initial Catalog = elektronski_dnevnik; Integrated Security = True"/>
+		<!--<add name="con" connectionString="Data Source = DESKTOP-CKQNC93\SQLEXPRESS; Initial Catalog = elektronski_dnevnik; Integrated Security = True"/>-->
+		<add name="con" connectionString="Data Source = DESKTOP-CQJ6GR7\SQLEXPRESS; Initial Catalog = Esdnevnik; Integrated Security = True"/>
 	</connectionStrings>
 </configuration>
