--- a/Forma/EDnevnik.csproj
+++ b/Forma/EDnevnik.csproj
@@ -8,11 +8,10 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>EDnevnik</RootNamespace>
     <AssemblyName>EDnevnik</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -54,11 +53,23 @@
     <Compile Include="Glavna.Designer.cs">
       <DependentUpon>Glavna.cs</DependentUpon>
     </Compile>
+    <Compile Include="Glavna2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Glavna2.Designer.cs">
+      <DependentUpon>Glavna2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ocena.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ocena.Designer.cs">
+      <DependentUpon>Ocena.cs</DependentUpon>
     </Compile>
     <Compile Include="Osoba.cs">
       <SubType>Form</SubType>
@@ -81,11 +92,23 @@
     <Compile Include="Sifarnik.Designer.cs">
       <DependentUpon>Sifarnik.cs</DependentUpon>
     </Compile>
+    <Compile Include="Upisnica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Upisnica.Designer.cs">
+      <DependentUpon>Upisnica.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Glavna.resx">
       <DependentUpon>Glavna.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Glavna2.resx">
+      <DependentUpon>Glavna2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ocena.resx">
+      <DependentUpon>Ocena.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Osoba.resx">
       <DependentUpon>Osoba.cs</DependentUpon>
@@ -98,13 +121,15 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Raspodela.resx">
       <DependentUpon>Raspodela.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sifarnik.resx">
       <DependentUpon>Sifarnik.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Upisnica.resx">
+      <DependentUpon>Upisnica.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
